# project_generator

./: generate_project.py  project_generator.py
sandbox/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
sandbox/cmake/: Cache.cmake
sandbox/src/: CMakeLists.txt
sandbox/src/SOME/: @ENTITY_NAME.cpp  CMakeLists.txt
sandbox/src/SOME/include/SOME/: config.hpp.in
sandbox/templates/: module_template.xml  project_template.xml
sandbox/templates/cmake/: CompilerWarnings.cmake
templates/: CMakeLists.txt  module_template.xml  project_template.xml  templates.xml
templates/cmake/: Conan.cmake  StaticAnalyzers.cmake
